--- a/archSearch.html
+++ b/archSearch.html
@@ -472,7 +472,7 @@
         date: "2025-12-10",
         location: "Tikal, Guatemala",
         status: "pending",
-        images: ["https://via.placeholder.com/300x200?text=Mayan+Calendar+Stone"]
+        images: ["https://images.unsplash.com/photo-1582407947304-fd86f028f716?w=300&h=200&fit=crop"]
       },
       {
         id: 2,
@@ -483,7 +483,7 @@
         date: "2025-12-09",
         location: "Utah, USA",
         status: "pending",
-        images: ["https://via.placeholder.com/300x200?text=Trilobite+Fossil"]
+        images: ["https://images.unsplash.com/photo-1580407196238-dac33f57c410?w=300&h=200&fit=crop"]
       }
     ];
     
@@ -499,7 +499,7 @@
         period: "196 BCE",
         verified: true,
         citation: "British Museum Collection, Item EA 24",
-        images: ["https://via.placeholder.com/300x200?text=Rosetta+Stone"]
+        images: ["https://images.unsplash.com/photo-1564514565-1e65dc9d9bdc?w=300&h=200&fit=crop"]
       },
       {
         id: 101,
@@ -510,7 +510,7 @@
         period: "600-900 CE",
         verified: true,
         citation: "Archaeological Survey of Honduras, Report 2018",
-        images: ["https://via.placeholder.com/300x200?text=Mayan+Pottery"]
+        images: ["https://images.unsplash.com/photo-1610701596007-11502861dcfa?w=300&h=200&fit=crop"]
       },
       {
         id: 102,
@@ -521,7 +521,7 @@
         period: "150 million years ago",
         verified: true,
         citation: "Natural History Museum, Specimen #BMNH 37001",
-        images: ["https://via.placeholder.com/300x200?text=Archaeopteryx+Fossil"]
+        images: ["https://images.unsplash.com/photo-1596495577886-d920f1fb7238?w=300&h=200&fit=crop"]
       },
       {
         id: 103,
@@ -532,7 +532,7 @@
         period: "Millions of years old",
         verified: true,
         citation: "Geological Survey Database, Ref GEO-2024",
-        images: ["https://via.placeholder.com/300x200?text=Granite+Rock"]
+        images: ["https://images.unsplash.com/photo-1518709268805-4e9042af9f23?w=300&h=200&fit=crop"]
       },
       {
         id: 104,
@@ -543,7 +543,7 @@
         period: "Various periods",
         verified: true,
         citation: "Geological Survey Database, Ref GEO-2024",
-        images: ["https://via.placeholder.com/300x200?text=Limestone+Rock"]
+        images: ["https://images.unsplash.com/photo-1611780116892-c3c1c2c09e2e?w=300&h=200&fit=crop"]
       }
     ];
     
